实现多语言的框架支持

--- a/src/main/resources/lang/en_us.json
+++ b/src/main/resources/lang/en_us.json
@@ -63,7 +63,7 @@
         }
     },
     "DefaultF": {
-        "player": "&aSorted your inventory",
+        "player": "&aSorted your inventory.",
         "target": "&aSorted the &f{0}&a you are looking at.",
         "menu": {
             "name": "&aPress &e&lF &ato sort",
