feat: 单个功能新增权限判断，需要配置文件启用PermCheck

--- a/MC12/src/main/resources/lang/en_us.json
+++ b/MC12/src/main/resources/lang/en_us.json
@@ -151,6 +151,7 @@
         "current": "&fCurrent state:",
         "server_disabled": "&4Server disabled",
         "player_disabled": "&cDisabled",
-        "player_enabled": "&aEnabled"
+        "player_enabled": "&aEnabled",
+        "perm_deny": "&cPermission denied"
     }
 }
